# pybasics

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
src/pybasics/: __init__.py  biology.py  globals.py  main.py  mongodb.py  request.py
src/pybasics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
