[metadata]
name = pybasics
version = 0.2b
author = Florian Malard, PhD
author_email = florian.malard@gmail.com
description = Basic utils in Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/synthaze/pybasics
project_urls =
    Bug Tracker = https://github.com/synthaze/pybasics/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
